2013-05-06  Sergio Martin <sergio.martin@artica.es>

	* include/help/en/help_module_interval_factor.php
	include/help/es/help_module_interval_factor.php
	godmode/agentes/module_manager_editor_common.php: Change the
	control of interval module when is data module from extended 
	from time to normal box with a different help tip explaining
	that this control is not setted in seconds.

	* operation/integria_incidents/incident.php
	images/book_edit.png
	general/pandora_help.php
	godmode/setup/setup_general.php: Aesthetic fixes

2013-05-04  Junichi Satoh  <junichi@rworks.jp>

	* mobile/include/ui.class.php: Added charset.

2013-05-04  Junichi Satoh  <junichi@rworks.jp>

	* mobile/index.php, mobile/include/user.class.php,
	include/functions.php: Fixed i18n failure in the mobile console.

2013-05-03  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_graph.php: Fixed warnings.

2013-05-01 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/agent_manager.php: improved the source code style.
	
	* godmode/agentes/configurar_agente.php: fixed the agents address
	with white spaces in the both sides.
	
	Fixes: #2171

2013-05-01 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/system_info.php, extensions/agents_modules.php,
	extensions/vnc_view.php, extensions/users_connected.php,
	extensions/update_manager/lib/libupdate_manager.php,
	extensions/update_manager/lib/libupdate_manager_updates.php,
	extensions/snmp_explorer.php, extensions/insert_data.php,
	operation/agentes/tactical.php: improved the source code.
	
	* include/functions_reporting.php: fixed the links of list modules.
	
	Fixes: #3612243

2013-04-30  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/agent_template.php: Add tags creation
	in module tamplates application for bug #3611909

2013-04-30  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/reporting_builder.item_editor.php: 
	Reporting builder layout and hide graph per agent option